--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
